@startuml

title __COMPONENTS's Class Diagram__\n

  package com.koltunm.skanner {
    package com.koltunm.skanner.ui {
      package com.koltunm.skanner.ui.components {
        class ArticleFeed {
            - FXML_FILE : String
            + lblArticleTitle : Label
            + lblArticleSummary : Label
            + linkArticleTitle : Hyperlink
            + imgArticle : ImageView
            - flag : boolean
            - image : Image
            + ArticleFeed()
            + openArticleLink()
            + setImage()
            + getArticle()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.ui {
      package com.koltunm.skanner.ui.components {
        class TweetFeed {
            - FXML_FILE : String
            + lblDate : Label
            + lblUser : Label
            + lblTweetMessage : Label
            + TweetFeed()
            - setDate()
            - setMessage()
            - setUser()
        }
      }
    }
  }
  

  ArticleFeed -up-|> GridPane
  ArticleFeed o-- Article : article
  CompositeSize -up-|> Cloneable
  Interval -up-|> Comparable
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  TweetFeed -up-|> AnchorPane
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
